--- a/src/styles/PublicationsPage.module.less
+++ b/src/styles/PublicationsPage.module.less
@@ -40,6 +40,12 @@
   }
 }
 
+.pubcardtext {
+  flex: 2;
+  justify-content: space-between;
+  padding-left: 2rem;
+}
+
 .pubcarddate {
   color: @warm-grey;
   font-size: @font-small-size;
@@ -72,6 +78,11 @@
         line-height: 3rem;
       }
     }
+  }
+
+  .pubcardtext {
+    padding-left: 0;
+    padding: 0 2rem;
   }
 
   .pubgridlayout {
