--- a/src/styles/OurTeamPage.module.less
+++ b/src/styles/OurTeamPage.module.less
@@ -1,7 +1,6 @@
 @import './themes.less';
 
 .ourteampage {
-  width: 100vw;
   text-align: center;
   padding: 10%;
 }
